--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             <h1 style="color: white;">Hello, I am Tanisha Rathore</h1>
             <p>Engineering Student</p>
             <p><a href="https://www.linkedin.com/in/tanisha-rathore-702b62258/"><i>LinkedIn</i></a> | <a
-                    href="https://github.com/tanisharathore"><i>GitHub</i></a></p>
+                    href="https://github.com/tanisharathore"><i>GitHub</i></a> | <a
+                href="https://codolio.com/profile/tanisha_10"><i>Coding</i></a></p>
             <p><a href="TANISHA.pdf" download="Tanisha_Rathore_Resume" class="resume-button">My Resume</a></p>
         </div>
         <div class="header-image">
